<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CharityChallenger</string>
    <string name="hello_world">Welcome to Charity Challenger</string>
    <string name="title_activity_new_picture">Photo Taking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_picture_list">PictureListActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add an Picture</string>
    <string name="picture_title">Pictures</string>
    <string name="picture_label">Please Take a Challenged Picture!</string>
    <string name="save_button_text">Send</string>
    <string name="cancel_button_text">Cancel</string>

    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item></item>
    </string-array>

    <!-- 370546396320150 sample facebook id, works ok -->
    <!-- 262193280571643 kevin's facebook id -->
    <!-- 396935243786864 snambi facebook id -->
    <string name="facebook_app_id">370546396320150</string>
    <string name="title_activity_login">Charity Challenger</string>
    <string name="title_activity_home">Challenges</string>
    <string name="facebook_login_label">Login to facebook</string>
    <string name="donate_activity_title">Donate to Charity</string>
    <string name="payment_confirmation">Donation Confirmation</string>
    <string name="welcome_user">Welcome: </string>
    <string name="charity_challenge_name">Global Giving Challenge</string>
    <string name="target_amount_label">Target</string>
    <string name="target_amount_raised">/ $2000</string>
    <string name="amount_raised_label">Raised</string>
    <string name="amount_raised">$500 Raised</string>
    <string name="donoate">Donate</string>
    <string name="accept_challenege">Take Photo</string>
    <string name="description_label">More Details:</string>
    <string name="challenege_description">Here are more challenge details... Please do this and take your picture and send back to sender .. have fun...</string>
    <string name="challenge_details_label">Challenge Details</string>
    <string name="target_amout">Target:</string>
    <string name="raised">Raised:</string>
    <string name="title_activity_action_detail">Action Details</string>
    <string name="action_description">Challenge Description</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_location">Friend\'s Location</string>
    <string name="invite_friend_label">View</string>
    <string name="charity_name_label">Charity :</string>
    <string name="charity_name_value">Global Giving</string>
    <string name="charity_address_label">Address:</string>
    <string name="charity_address_value">San Jose, CA.</string>
    <string name="charity_cause">Description :</string>
    <string name="cahrity_cause_value">Hemophilia in Children</string>
    <string name="donate_amount_label">Donate $:</string>
    <string name="donate_amount_value">50</string>
    <string name="payment_type_label">Payment Type :</string>
    <string name="payment_type_value">PayPal</string>
    <string name="credit_card_number_label">Credit Card #</string>
    <string name="credit_card_number_value">1234-4567-5432-5678</string>
    <string name="expiry_date_label">Expiry Date :</string>
    <string name="expiry_date_value">Nov 20th, 2014</string>
    <string name="donate_now_value">Donate Now!</string>
    <string name="title_activity_achievement">AchievementActivity</string>
    <string name="title_activity_challenge_details">Challenge Details</string>
    <string name="title_activity_invite_friends">Friends Invitations</string>
    <string name="title_activity_fun">Fun Thing to See</string>
    <string name="title_action_received_challenges">Received Challenges</string>
    <string name="exception">Exception: %1$s</string>
    <string name="ok_button">OK</string>
    <string name="need_perms_alert_text">In order to pick your friends you need to accept all the permissions on the following page.</string>
    <string name="need_perms_alert_button_ok">OK</string>
    <string name="need_perms_alert_button_quit">Quit</string>
    <string name="charity_url_label">Charity URL:</string>
    <string name="charity_url_value">http://www.globalgiving.com</string>
    <string name="charity_confirmation_value">Thanks for your donation!!!</string>
    <string name="title_activity_all_invitations">Charity Challenger</string>
    <string name="title_activity_invitation_details">Invitation Details</string>
    <string name="invite_more_friends">Browse More!!</string>
    <string name="action_home">Home</string>
    <string name="title_activity_all_invitations_fragment">Charity Challenger</string>
    <string name="title_action_accepted_challenges">Charity Challenger</string>
    <string name="title_activity_all_accepted">Charity Challenger</string>
    <string name="title_activity_invitation_accepted">Charity Challenger</string>
    
    <string-array name="theme_array">
        <item>cctheme1</item>
        <item>cctheme2</item>
    </string-array>
        <string name="challenge_progress_label">Challenge Progress</string>
        <string name="time_ago">2d</string>
    
</resources>
