<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:layout_margin="10dp">
    <ImageView
        android:id="@+id/ivCharity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvTargetAmountRaised"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCharityChallengeName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivCharity"
        android:layout_marginTop="24dp"
        android:text="@string/target_amount_raised" />

    <TextView
        android:id="@+id/tvAmountRaised"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTargetAmountRaised"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTargetAmountRaised"
        android:layout_marginTop="19dp"
        android:text="@string/amount_raised" />

    <TextView
        android:id="@+id/tvTargetAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTargetAmountRaised"
        android:layout_alignBottom="@+id/tvTargetAmountRaised"
        android:layout_alignLeft="@+id/ivCharity"
        android:text="@string/target_amount_label" />

    <TextView
        android:id="@+id/tvAmountRaisedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAmountRaised"
        android:layout_alignBottom="@+id/tvAmountRaised"
        android:layout_alignLeft="@+id/tvTargetAmountLabel"
        android:text="@string/amount_raised_label" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAmountRaised"
        android:layout_marginTop="17dp"
        android:text="@string/donoate" />

    <Button
        android:id="@+id/btnAcceptChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDonate"
        android:layout_alignBottom="@+id/btnDonate"
        android:layout_marginRight="19dp"
        android:layout_toLeftOf="@+id/btnDonate"
        android:text="@string/accept_challenege" />

    <TextView
        android:id="@+id/tvCharityChallengeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivCharity"
        android:layout_marginTop="41dp"
        android:text="@string/charity_challenge_name" />

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnAcceptChallenge"
        android:layout_marginTop="14dp"
        android:text="@string/description_label" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDescriptionLabel"
        android:text="@string/challenege_description" />

</RelativeLayout>
