<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
        <TextView
        android:id="@+id/tvChallegeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_description" />

    <TextView
        android:id="@+id/tvChallengeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Make funny faces in front of public" />
    -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/picture_label"
        android:textSize="20sp"
        android:visibility="gone"  />

    <EditText
        android:id="@+id/picture_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="My Picture Challenge"
        android:visibility="gone" />
    
        <ImageView
        android:id="@+id/picture_preview_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/photo_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0.09"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />
<!--  
    <com.parse.ParseImageView
        android:id="@+id/picture_preview_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/photo_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0.09"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />
    
    -->

    <!--
    <Spinner
        android:id="@+id/rating_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    -->

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/cancel_button"
        android:layout_toLeftOf="@+id/cancel_button"
        android:background="#e35683"
        android:src="@drawable/ic_action_photo"
        android:text="@string/action_new" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/cancel_button"
        android:background="#e35683"
        android:textColor="#FFFFFF"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#e35683"
        android:text="@string/cancel_button_text" />

</RelativeLayout>