<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background" >

    <FrameLayout
        android:id="@+id/flDonateProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp" >

		<ImageView
            android:id="@+id/ivDonateCharityChallenge"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" 
            />

       <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tvDonateChallengeName"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000"
                android:padding="2dp"
				android:gravity="center_horizontal|center_vertical"
                android:text="Ice bucket \nChallenge "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#e35683" />

        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/flDonateProfile"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/tvDonateChallengeProgressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft = "10dp"
            android:layout_marginRight ="10dp"
            android:layout_marginBottom ="5dp"
            android:text="@string/challenge_progress_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/challengeDonateProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_alignLeft="@+id/tvDonateChallengeProgressLabel"
            android:layout_alignRight="@+id/tvDonateChallengeProgressLabel"
            android:layout_below="@+id/tvDonateChallengeProgressLabel"
            android:progressDrawable="@drawable/progressbar2" />

        <TextView
            android:id="@+id/tvDonateTargetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/challengeDonateProgressBar"
            android:layout_below="@+id/challengeDonateProgressBar"
			android:layout_marginTop="5dp"
            android:text="@string/target_amount_raised"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />

        <TextView
            android:id="@+id/tvDonateRaised"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvDonateTargetAmount"
            android:layout_alignBottom="@+id/tvDonateTargetAmount"
            android:layout_alignLeft="@+id/challengeDonateProgressBar"
            android:text="@string/amount_raised"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_secondary_color" />
    </RelativeLayout>

</RelativeLayout>